--- a/src/app/components/system-settings/system-settings.component.scss
+++ b/src/app/components/system-settings/system-settings.component.scss
@@ -1,8 +1,10 @@
 .system-settings {
-	display: flex;
+    display: flex;
+    height: 96%;
+    overflow: auto;
 
 	.nav {
-		width: 25%;
+		width: 22%;
 
 		ul {
 			list-style: none;
@@ -35,8 +37,10 @@
 
 	.detail {
 		border-left: 1px solid gray;
-		width: 60%;
-		padding-left: 2rem;
+		width: 73%;
+		height: 100%;
+		overflow: auto;
+		padding: 0 1rem 0 2rem;	
 
 		.logo-container {
 			display: flex;
@@ -55,6 +59,46 @@
 
 		.field {
 			width: 40%;
+		}
+
+		.avatar-container {
+			display: flex;
+			align-items: center;
+			margin-bottom: 1rem;
+		}
+
+		.rounded-image {
+			width: 5rem;
+			height: 5rem;
+			border-radius: 50%;
+			margin-right: 1rem;
+			object-fit: cover;
+		}
+
+		.form-upload {
+			width: 0.1px;
+			height: 0.1px;
+			opacity: 0;
+			overflow: hidden;
+			position: absolute;
+			z-index: -1;
+		}
+	
+		.btn-text {
+			display: inline-block;
+			text-decoration: none;
+			border-bottom: 1px solid #000;
+			padding: 3px;
+			-webkit-transition: all 0.2s;
+			transition: all 0.2s;
+	
+			&:hover {
+				background-color: #eee;
+				color: #000;
+				-webkit-transform: translateY(-2px);
+				transform: translateY(-2px);
+				cursor: pointer;
+			}
 		}
 	}
 }
