--- a/src/app/shared/generic-page/table/table.component.scss
+++ b/src/app/shared/generic-page/table/table.component.scss
@@ -52,6 +52,16 @@
         .selected {
             background-color: #a3a3a3 !important;
         }
+
+		.error-cell {
+			.error-title {
+				margin: 0;
+			}
+			
+			.error-msg {
+				font-size: .8rem;
+			}
+		}
     }
 
     ::ng-deep .mat-sort-header-arrow {
