--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,8 +19,12 @@
 		</mat-form-field>
 
 		<div fxFlex fxLayoutAlign="end">
-			<button mat-raised-button color="primary" 
-				[disabled]="theForm.invalid || disableBtn" (click)="onSubmit()">Login
+			<button mat-raised-button color="primary" (click)="onSubmit()" 
+				[disabled]="theForm.invalid || disableBtn">
+				<div style="display: flex; align-items: center;">
+					<mat-spinner *ngIf="disableBtn" diameter="20" strokeWidth="3" style="margin-right: .7rem;"></mat-spinner>
+					<span>Login</span>
+				</div>
 			</button>
 		</div>
 	</form>
