--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,16 +5,32 @@
 		<mat-form-field appearance="outline" class="mb-3 mt-3">
 			<mat-label>Email</mat-label>
 			<input type="email" matInput placeholder="Email" formControlName="email" required>
-			<mat-error *ngIf="theForm.get('email')?.hasError('required')">
-				Email is required
+			<mat-error *ngIf="theForm.get('email')?.errors">
+				<div *ngIf="theForm.get('email')?.hasError('required')">
+					Email is required
+				</div>
+
+				<div *ngIf="theForm.get('email')?.hasError('email')">
+					Please provide valid email
+				</div>
+
+				<div *ngIf="theForm.get('email')?.hasError('minlength')">
+					Email must be minimum 10 characters
+				</div>
 			</mat-error>
 		</mat-form-field>
 
 		<mat-form-field appearance="outline" class="mb-3">
 			<mat-label>Password</mat-label>
 			<input type="password" matInput placeholder="Password" formControlName="password">
-			<mat-error *ngIf="theForm.get('password')?.hasError('required')">
-				Password is required
+			<mat-error *ngIf="theForm.get('password')?.errors">
+				<div *ngIf="theForm.get('password')?.hasError('required')">
+					Password is required
+				</div>
+
+				<div *ngIf="theForm.get('password')?.hasError('minlength')">
+					Password must be minimum 10 characters
+				</div>
 			</mat-error>
 		</mat-form-field>
 
