--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,15 +7,51 @@
 		position: relative;
 		border: 1px solid #e6dbdb;
 		border-radius: 12px;
+
+		@media only screen and (max-width: 1100px) {
+			width: 45%;
+		}
+
+		@media only screen and (max-width: 850px) {
+			width: 55%;
+		}
+
+		@media only screen and (max-width: 750px) {
+			width: 65%;
+		}
+
+		@media only screen and (max-width: 600px) {
+			width: 75%;
+			padding: 2rem 1rem 1rem;
+		}
+
+		@media only screen and (max-width: 400px) {
+			width: 85%;
+		}
 	}
 
 	.logo {
-		width: 100px;
-		height: 100px;
+		width: 90px;
+		height: 90px;
+		object-fit: contain;
 		border-radius: 100%;
 		position: absolute;
+		left: 50%;
 		top: -50px;
-		right: 40%;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
 		box-shadow: 1px 1px 10px #cacaca;
+
+		@media only screen and (max-width: 600px) {
+			width: 80px;
+			height: 80px;
+		}
+
+		@media only screen and (max-width: 400px) {
+			width: 75px;
+			height: 75px;
+
+			top: -45px;
+		}
 	}
 }
