--- a/src/app/layout/main-layout/layout.component.html
+++ b/src/app/layout/main-layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column">
-    <div fxLayout="row" style="height: calc(100% - 40px);">
+    <div fxLayout="row" style="height: 100%;">
         <drawer class="drawer" [fxFlex]="drawerWidth" (signal)="onDrawerToggle($event)"></drawer>
 
         <div class="main-content" fxFlex>
@@ -11,6 +11,6 @@
         </div>
     </div>
 
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
 
