--- a/src/app/layout/main-layout/layout.component.scss
+++ b/src/app/layout/main-layout/layout.component.scss
@@ -8,7 +8,7 @@
     }
     
     .main {
-        height: calc(100% - 95px);
-        padding: 20px;
+        height: calc(100% - 65px);
+		padding: 4px 0 4px 4px;
     }
 }
