--- a/src/app/shared/generic-page/table/table.component.scss
+++ b/src/app/shared/generic-page/table/table.component.scss
@@ -1,89 +1,93 @@
-.container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+.table-card {
+	height: calc(100% - 32px);
 
-    .table-main-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .title-section {
-		margin-bottom: 5px;
-		h1 {
-			margin: 0;
+	.container {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+	
+		.table-main-header {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
 		}
-
-        .mat-form-field {
-            font-size: 14px;
-            width: 100%;
-        }
-    }
-
-    .action {
-        margin-right: 5px;
-    }
-    
-    .table {  
-        overflow: auto; 
-        height: 100%; 
-        flex: 1;
-        border: 1px solid #eee;
-
-        table {
-            width: 100%;
-
-            tr.mat-header-row {
-                height: 50px !important;
-                border-radius: 4px;
-
-                th {
-                    font-weight: 500;
-                    font-size: 16px;
-                }
-            }
-
-			td {
-    			max-width: 20rem;
-			}
-        }
-
-        .selected {
-            background-color: #a3a3a3 !important;
-        }
-
-		.error-cell {
-			.error-title {
+	
+		.title-section {
+			margin-bottom: 5px;
+			h1 {
 				margin: 0;
 			}
-			
-			.error-msg {
-				font-size: .8rem;
+	
+			.mat-form-field {
+				font-size: 14px;
+				width: 100%;
 			}
 		}
-    }
-
-    ::ng-deep .mat-sort-header-arrow {
-        color: #fff;
-    }
-
-    .paginator {
-        height: 50px;
-        background-color: #f1f1f1;
-        border-radius: 4px;
-    }
-
-	:host ::ng-deep .search-field .mat-form-field-wrapper {
-		padding: 0 !important;
-	}
-
-	.image {
-		width: 50px;
-		height: 50px;
-		border-radius: 50%;
-		margin-right: 1rem;
-		object-fit: cover;
+	
+		.action {
+			margin-right: 5px;
+		}
+		
+		.table {  
+			overflow: auto; 
+			height: 100%; 
+			flex: 1;
+			border: 1px solid #eee;
+	
+			table {
+				width: 100%;
+	
+				tr.mat-header-row {
+					height: 50px !important;
+					border-radius: 4px;
+	
+					th {
+						font-weight: 500;
+						font-size: 16px;
+					}
+				}
+	
+				td {
+					max-width: 20rem;
+				}
+			}
+	
+			.selected {
+				background-color: #a3a3a3 !important;
+			}
+	
+			.error-cell {
+				.error-title {
+					margin: 0;
+				}
+				
+				.error-msg {
+					font-size: .8rem;
+				}
+			}
+		}
+	
+		::ng-deep .mat-sort-header-arrow {
+			color: #fff;
+		}
+	
+		.paginator {
+			height: 50px;
+			background-color: #f1f1f1;
+			border-radius: 4px;
+		}
+	
+		:host ::ng-deep .search-field .mat-form-field-wrapper {
+			padding: 0 !important;
+		}
+	
+		.image {
+			width: 50px;
+			height: 50px;
+			border-radius: 50%;
+			margin-right: 1rem;
+			object-fit: cover;
+		}
 	}
 }
 
