--- a/src/app/layout/toolbar/toolbar.component.scss
+++ b/src/app/layout/toolbar/toolbar.component.scss
@@ -6,7 +6,8 @@
 
     .toolbar-nav-item {
         color: #afa7a7;
-        width: 60px;
+        min-width: 60px;
+		padding: 0 .5rem;
 
         mat-icon {
             width: 30px;
@@ -17,12 +18,19 @@
         &:hover {
             background-color: #eee;
             cursor: pointer;
-            color: #fff;
+            color: #999;
         }
+
+		.user-name {
+			font-size: 1rem;
+		}
     }
 
     .avatar {
-        width: 35px;
-        border-radius: 50%;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		object-fit: contain;
+		margin-right: 0.5rem;
     }
 }
