searching with exact match  working

--- a/src/app/shared/generic-page/table/table.component.html
+++ b/src/app/shared/generic-page/table/table.component.html
@@ -25,7 +25,7 @@
 					<mat-icon>add</mat-icon> {{ config.addBtnText || 'Add New'}}
 				</button>
 
-				<button mat-stroked-button (click)="loadData()">
+				<button mat-stroked-button (click)="onRefreshData()">
 					<mat-icon>refresh</mat-icon>
 				</button>
 			</div>
