--- a/src/app/layout/toolbar/toolbar.component.scss
+++ b/src/app/layout/toolbar/toolbar.component.scss
@@ -30,7 +30,7 @@
 		width: 50px;
 		height: 50px;
 		border-radius: 50%;
-		object-fit: contain;
+		object-fit: cover;
 		margin-right: 0.5rem;
     }
 }
