highlight settings btn when clicked.

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
     <nav fxFlex="100" fxLayout="row" fxLayoutAlign="end" style="height: 100%;">
-        <div class="toolbar-nav-item" fxLayoutAlign="center center" routerLink="settings">
+        <div class="toolbar-nav-item" fxLayoutAlign="center center" routerLink="settings" routerLinkActive="active">
             <mat-icon>settings</mat-icon>
         </div>
 
