--- a/src/app/shared/alert-dialog/alert.component.scss
+++ b/src/app/shared/alert-dialog/alert.component.scss
@@ -15,18 +15,30 @@
 		flex: 0 1 30%;
 	}
 
-	.error {
+	.circle {
 		border-radius: 50%;
 		width: 60px;
 		height: 60px;
-		
+	}
+
+	.error {	
 		border: 2px solid #f27474;
 		color: #f27474;
+	}
 
-		mat-icon {
-			font-size: 28px;
-			height: 28px;
-			width: 28px;
-		}
+	.success {	
+		border: 2px solid green;
+		color: green;
+	}
+
+	.warning, .confirm {	
+		border: 2px solid lightskyblue;
+		color: lightskyblue;
+	}
+
+	mat-icon {
+		font-size: 28px;
+		height: 28px;
+		width: 28px;
 	}
 }
