--- a/src/app/components/courses/course.component.html
+++ b/src/app/components/courses/course.component.html
@@ -1,1 +1,1 @@
-<app-table [config]="courseConfig.tableConfig" [actions]="actions" (signal)="onTableSignals($event)"></app-table>
+<app-table [config]="courseConfig" [actions]="actions" (signal)="onTableSignals($event)"></app-table>
