--- a/src/app/components/system-settings/system-settings.component.html
+++ b/src/app/components/system-settings/system-settings.component.html
@@ -68,7 +68,7 @@
 						</label>
 					</div>
 
-					<mat-form-field appearance="outline" class="width-h-p">
+					<mat-form-field appearance="outline" class="width-100-p">
 						<mat-label>Principle Message</mat-label>
 						<textarea type="text" rows="4" matInput placeholder="Principle Message" formControlName="principleMessage"></textarea>
 						<mat-error *ngIf="theForm.controls['principleMessage'].errors">
@@ -89,7 +89,7 @@
 						</label>
 					</div>
 
-					<mat-form-field appearance="outline" class="width-h-p">
+					<mat-form-field appearance="outline" class="width-100-p">
 						<mat-label>Introduction</mat-label>
 						<textarea type="text" rows="4" matInput placeholder="Introduction" formControlName="introduction"></textarea>
 						<mat-error *ngIf="theForm.controls['introduction'].errors">
