--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 	margin-bottom: 1rem !important;
 }
 
-.width-h-p {
+.width-100-p {
 	width: 100%;
 }
