--- a/src/app/components/courses/add-course/add-course.component.html
+++ b/src/app/components/courses/add-course/add-course.component.html
@@ -64,8 +64,9 @@
 			</mat-form-field>
 
 			<mat-chip-list #chipList aria-label="Course Outline Items" multiple class="w-100-p">
-				<mat-chip *ngFor="let item of outlineItems" (removed)="removeOutlineItem(item)">
+				<mat-chip *ngFor="let item of outlineItems" [removable]="true" (removed)="removeOutlineItem(item)">
 					{{item}}
+					<mat-icon matChipRemove>cancel</mat-icon>
 				</mat-chip>
 			</mat-chip-list>
 		</div>
